project(benchmark)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_COMPILER g++-10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_AUTOMOC ON)
find_package( Qt5 COMPONENTS Core Gui Widgets OpenGL PrintSupport REQUIRED)
list (APPEND CMAKE_MODULE_PATH qcustomplot)
add_executable(${PROJECT_NAME} main.cpp plot.cpp qcustomplot/qcustomplot.cpp)
target_link_libraries(${PROJECT_NAME} Qt5::Core  Qt5::Widgets  Qt5::Gui  Qt5::OpenGL Qt5::PrintSupport)
